GS-9064, GS-8903 Fixed subnav spacing

--- a/src/webapp/res/css/topnav.css
+++ b/src/webapp/res/css/topnav.css
@@ -363,19 +363,19 @@
 }
 
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_hd {
-    margin-right: 6px;
+    margin-right: 3px;
 }
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_aa {
-    margin-right: 6px;
+    margin-right: 3px;
 }
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_ld {
-    margin-right: 6px;
+    margin-right: 3px;
 }
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_iys {
-    margin-right: 6px;
+    margin-right: 3px;
 }
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_ctrs {
-    margin-right: 6px;
+    margin-right: 3px;
 }
 #topnav #topnav_menusubnav_wrapper.perl ul#topnav_menusubnav li#topnav_c {
     margin-right: 0;
